# MySillyTavern

./: AGENTS.md  PLAN.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  spustit.sh  vite.config.ts  vitest.config.ts
.codewhale/state/: subagents.v1.json
.github/workflows/: build-android.yml  build-windows.yml  release.yml
docs/: m15-android-pruzkum.md
public/: debug-anchor.html  e2e-harness.html
scripts/: build-windows.ps1  copy_agents.sh  e2e.mjs  find_i18n_diff.py  fix_i18n_keys.py  fix_imports.sh  fix_phi.sql  m20_1.py  merge_m20_m21.sh
src/: App.tsx  index.css  logging.test.ts  logging.ts  main.tsx  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  migrations.rs  png_card.rs
src-tauri/src/commands/: backup.rs  cards.rs  chat.rs  dice.rs  export_campaign.rs  export_chronicle.rs  files.rs  image_gen.rs  logging.rs  mod.rs  secrets.rs  sync_journal.rs
src-tauri/src/providers/: claude.rs  embeddings.rs  gemini.rs  image_gen.rs  mod.rs  openai.rs  sse.rs
src/cards/: campaignExport.ts  cardExport.test.ts  cardExport.ts  cardImport.ts  cardTypes.ts  personaExport.ts
src/chat/: changeSummary.ts  chronicleChunker.ts  chronicleTemplate.ts  chronicleThemes.ts  chronicleTypes.ts  diceCommand.test.ts  diceCommand.ts  director.ts  duration.test.ts  duration.ts  edgeTts.ts  fuzzyMatch.test.ts  fuzzyMatch.ts  gameOver.ts  groupSpeaker.test.ts  groupSpeaker.ts  inlineSuggestions.test.ts  inlineSuggestions.ts  inventoryProcessor.ts  inventoryTags.test.ts  inventoryTags.ts  npcPromotion.test.ts  npcPromotion.ts  (+17 more)
(+141 files in other folders)
