[package]
name = "mysillytavern"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mysillytavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
base64 = "0.22"
crc32fast = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# tauri-plugin-dialog and tauri-plugin-process are desktop-only; excluding them
# by target means Android builds need no special cargo flags.
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"

